--- a/dev/webtulip/documentation/templates/base.html
+++ b/dev/webtulip/documentation/templates/base.html
@@ -32,7 +32,7 @@
             <li><a href="/">Something</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right"> 
-            <li><a href="/logout">Logout</a></li>
+            <li><a href="/network">Login</a></li>
           </ul>
         </div> 
       </div>
