--- a/dev/webtulip/documentation/static/css/style.css
+++ b/dev/webtulip/documentation/static/css/style.css
@@ -2,3 +2,17 @@
 .navbar-header > .navbar-brand {
 	color: #c657ff;
 }
+
+#main_network {
+	width: 100%;
+  height: 700px;
+  border: 1px solid lightgray;
+}
+
+#graphToLoad {
+	width: 50%;
+}
+
+.inlineDisplay {
+	display: inline;
+}
