added select box to network load page and uploading files to server

--- a/dev/webtulip/documentation/templates/network.html
+++ b/dev/webtulip/documentation/templates/network.html
@@ -15,7 +15,11 @@
 		<a class="btn btn-default" href="/upload">Upload a new file.</a>
 	</div>
 	<div class="col-lg-6">
-		<input id="graphToLoad" class="form-control inlineDisplay"></input>
+		<select id="graphToLoad" class="form-control inlineDisplay">
+		{% for network in network_names %}
+	    	<option value="{{network.name}}">{{network.name}}</option>
+	    {% endfor %}
+	    </select>
 		<input class="btn btn-default inlineDisplay" type="button" value="Load" name="loadGraph"></input>
 	</div>
 </div>
