--- a/dev/webtulip/documentation/templates/home.html
+++ b/dev/webtulip/documentation/templates/home.html
@@ -7,6 +7,5 @@
 
 {% block content %}
 	<h1>Tulip Web Wrapper</h1>
-
-	<h2>THIS IS A PYTHON WEB WRAPPER FOR TULIP.</h2>
+    <h3><a href="/network">Click here</a> to visualise some networks.</h3>
 {% endblock %}
