--- a/dev/webtulip/documentation/templates/upload.html
+++ b/dev/webtulip/documentation/templates/upload.html
@@ -12,15 +12,19 @@
 {% block content %}
 
 <form action="" method="post" enctype="multipart/form-data">
-  	{% csrf_token %}
-    {% for field in form %}
+  <div class="row">
+    <div class="col-lg-12">
+    	{% csrf_token %}
+      {% for field in form %}
         <div class="fieldWrapper">
-            {{ field.errors }}
-            {{ field.label_tag }} {{ field }}
+          {{ field.errors }}
+          {{ field.label_tag }} {{ field }}
         </div>
-    {% endfor %}
-    <br/>
-  	<button class="btn btn-default" type="submit">Upload</button>
+      {% endfor %}
+      <br/>
+    	<button class="btn btn-default" type="submit">Upload</button>
+    </div>
+  </div>
 </form>
 
 
