Added the ability to add sas data from live site

--- a/dev/webtulip/documentation/static/css/style.css
+++ b/dev/webtulip/documentation/static/css/style.css
@@ -16,3 +16,15 @@
 .inlineDisplay {
 	display: inline;
 }
+
+.padding_sm {
+	padding: 5px;
+}
+
+.padding_md {
+	padding: 10px;
+}
+
+.padding_lg {
+	padding: 15px;
+}
