--- a/dev/webtulip/documentation/templates/base.html
+++ b/dev/webtulip/documentation/templates/base.html
@@ -27,6 +27,15 @@
           </button>
           <a href="/" class="navbar-brand">Tulip Python Web Wrapper</a>
         </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <!--<li><a href="nothing">nothing</a></li>-->
+          </ul>
+          <ul class="nav navbar-nav navbar-right">  
+            <li><a href="/upload">Upload a network.</a></li>
+            <li><a href="/delete">Delete a network.</a></li>
+          </ul>
+        </div>
       </div>
     </nav>
 
