--- a/dev/webtulip/documentation/templates/upload.html
+++ b/dev/webtulip/documentation/templates/upload.html
@@ -12,19 +12,15 @@
 {% block content %}
 
 <form action="" method="post" enctype="multipart/form-data">
-  <div class="row">
-    <div class="col-lg-12">
     	{% csrf_token %}
       {% for field in form %}
-        <div class="fieldWrapper">
-          {{ field.errors }}
-          {{ field.label_tag }} {{ field }}
-        </div>
+      <div class="row">
+        <div class="col-lg-2 padding_sm">{{ field.label_tag }}</div>
+        <div class="col-lg-10 padding_sm">{{ field }}</div>
+      </div>
       {% endfor %}
-      <br/>
-    	<button class="btn btn-default" type="submit">Upload</button>
-    </div>
-  </div>
+  <br/>
+  <button class="btn btn-default" type="submit">Upload</button>
 </form>
 
 
