Improved layout and added additional information to vis

--- a/dev/webtulip/documentation/templates/home.html
+++ b/dev/webtulip/documentation/templates/home.html
@@ -62,7 +62,8 @@
     Green - pruned node<br/>
     Red - Clique based bundling<br/>
     Purple - Edge based bundling<br/>
-    Larger nodes represent how much nodes have been bundled<br/><br/>
+    Larger nodes represent how much nodes have been bundled<br/>
+    n - The number of nodes abstracted into this node<br/>
   </div>
 </div>
 
