--- a/dev/webtulip/documentation/templates/home.html
+++ b/dev/webtulip/documentation/templates/home.html
@@ -18,7 +18,7 @@
           <option value="{{network.network_name}}">{{network.network_name}}</option>
       {% endfor %}
       </select>
-    </div>  
+    </div>
     <div class="col-lg-2">
       <div class="checkbox">
         <label><input id="prune" type="checkbox" value="">Prune Network</label>
@@ -63,7 +63,9 @@
     Red - Clique based bundling<br/>
     Purple - Edge based bundling<br/>
     Larger nodes represent how much nodes have been bundled<br/>
-    n - The number of nodes abstracted into this node<br/>
+    p - The number of nodes abstracted into this node using pruning<br/>
+    c - The number of nodes abstracted into this node using clique based bundling<br/>
+    e - The number of nodes abstracted into this node using edge based bundling<br/>
   </div>
 </div>
 
